# hexagonapp

./: .gitignore  Cargo.toml  build.rs
examples/: Cargo.toml  all_server.rs
hexagonapp/: Cargo.toml
hexagonapp-grpc/: Cargo.toml  build.rs
hexagonapp-grpc/proto/: student.proto
hexagonapp-grpc/src/: lib.rs  server.rs  student.rs
hexagonapp-mysql/: Cargo.toml
hexagonapp-mysql/src/: lib.rs  student_entity.rs  student_repository.rs
hexagonapp-postgres/: Cargo.toml
hexagonapp-postgres/src/: lib.rs  student_repository.rs
hexagonapp-rest/: Cargo.toml
hexagonapp-rest/src/: lib.rs  server.rs  student.rs
hexagonapp/src/student/: mod.rs  student.rs
hexagonapp/src/student/repository/: mod.rs
src/: main.rs
src/application/grpc/: mod.rs  server.rs  student.rs
src/application/grpc/proto/: helloworld.proto
src/application/rest/: mod.rs  server.rs  student.rs
src/infrastructure/repository/postgres/: Cargo.toml  mod.rs  student_entity.rs  student_repository.rs
src/infrastructure/repository/postgres/src/: student_entity.rs  student_repository.rs
