[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.4.3"
futures = "0.3.15"
hexagonapp-rest = { path = "../hexagonapp-rest" }
hexagonapp-grpc = { path = "../hexagonapp-grpc" }
hexagonapp-postgres = { path = "../hexagonapp-postgres" }
hexagonapp-mysql = { path = "../hexagonapp-mysql" }

[[example]]
name = "all-server"
path = "all_server.rs"