[package]
name = "hexagonapp-grpc"
version = "0.1.0"
authors = ["Mcfloy <lucasperreau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hexagonapp_grpc"
path = "src/lib.rs"

[dependencies]
tonic = "0.4.3"
uuid = { version = "0.8.2", features = ["v4"] }
prost = "0.7.0"
hexagonapp = { path = "../hexagonapp" }
hexagonapp-postgres = {  path = "../hexagonapp-postgres" }

[build-dependencies]
tonic-build = "0.4.2"