[package]
name = "hexagonapp-rest"
version = "0.1.0"
authors = ["Mcfloy <lucasperreau@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexagonapp_rest"
path = "src/lib.rs"

[dependencies]
hexagonapp = { path = "../hexagonapp" }
hexagonapp-postgres = { path = "../hexagonapp-postgres" }
warp = "0.3.1"
uuid = { version = "0.8.2", features = ["v4", "serde"] }