[package]
name = "hexagonapp"
version = "0.1.0"
authors = ["Mcfloy <lucasperreau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hexagonapp"
path = "src/lib.rs"

[dependencies]
uuid = { version = "0.8.2", features = ["v4", "serde"] }
async-trait = "0.1.50"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }